# Praeteritum

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONVENTIONS.md  DataBase.db  LICENSE  LICENSE.md  LICENSE.txt  README.md  SECURITY.md  build.sh  dev-docker-compose.yml  docker-compose.yml  nginx.conf
.github/: CODEOWNERS
Backend/: .gitignore  DataBase.db  DataBase.db-journal  Dockerfile  database.py  docs.md  main.py  models.py  requirements.txt
Frontend/: Dockerfile  example.env  package.json  playwright.config.js  (+1 more)
backend/: .gitignore  Dev.Dockerfile  Dockerfile  example.env  pyproject.toml  requirements.txt  run.sh
backend/app/: __init__.py  __main__.py  config.py
backend/app/database/: __init__.py  database.py
backend/app/database/models/: __init__.py  actions_model.py  example_model.py  groups_model.py  invites_model.py  notes_model.py  retros_model.py  team_model.py  uta_model.py  utg_model.py  utr_model.py  votes_model.py
backend/app/database/schemes/: Praeterium.drawio  Praeterium_DB_scheme.drawio
backend/app/database/services/: action_service.py  group_service.py  note_service.py  retro_service.py  team_service.py  vote_service.py
backend/app/database/services/schemas/: action_schemas.py  group_schemas.py  note_schemas.py  retro_schemas.py  team_schemas.py  vote_schemas.py
backend/app/models/: example.py
backend/app/routes/: __init__.py  example.py
backend/app/routes/v1/: __init__.py  actions.py  boards.py  config.py  groups.py  kinde.py  notes.py  retrospectives.py  teams.py  vote.py
backend/app/routes/v1/services/: user_service.py
(+59 files in other folders)
